--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-navbar></app-navbar>
+<app-navbar [optsNavBar]="navBarOpts"></app-navbar>
 <div class="container mt-5">
     <router-outlet></router-outlet>
 </div>
