--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,10 +2,21 @@
 
 <div class="row" *ngFor="let post of posts">
     <div class="col">
+
         <h2> {{post.title.charAt(0).toUpperCase() + post.title.slice(1)}} </h2>
         <a [routerLink]="['/user', post.userId]">Ver Author</a>
         <p>{{ post.body }}</p>
-        <button class="btn btn-secondary">Comentarios</button>
+        
+        
+        <button class="btn btn-secondary" (click)="obtenerComentariosPorId(post.id)" >Comentarios</button>
+        <ng-container *ngFor="let comentFilter of comentariosFiltradorPorPost">
+            <div class="mt-3 col-sm-10 offset-sm-1" *ngIf="comentFilter.postId == post.id">
+                <label class="fw-bold">User: {{ comentFilter.name }}</label>
+                <br>
+                <label class="fw-bold">Repuesta: </label>
+                <p>{{ comentFilter.body }}</p>
+            </div>
+        </ng-container>
         <hr>
     </div>
 </div>
