--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,8 @@
         <p>{{ post.body }}</p>
         
         
-        <button class="btn btn-secondary" (click)="obtenerComentariosPorId(post.id)" >Comentarios</button>
+        
+        <app-button [optBtn]="opcionesBtnEstado" (click)="obtenerComentariosPorId(post.id)"></app-button>
         <ng-container *ngFor="let comentFilter of comentariosFiltradorPorPost">
             <div class="mt-3 col-sm-10 offset-sm-1" *ngIf="comentFilter.postId == post.id">
                 <label class="fw-bold">User: {{ comentFilter.name }}</label>
